# ecland

./: .gitignore  CMakeLists.txt  README.md  bundle.yml  ecland-bundle
.github/workflows/: build.yml
arch/ecmwf/hpc2020/: default
arch/ecmwf/hpc2020/gnu/14.2.0/hpcx-openmpi/2.9.0/: env.sh
arch/ecmwf/hpc2020/intel/2023.2.0/hpcx-openmpi/2.9.0/: env.sh
arch/ecmwf/hpc2020/nvhpc/24.5/hpcx-openmpi/2.17.1/: env.sh
cmake/: ecland_fetchcontent_dependencies.cmake  ecland_fetchcontent_ecbuild.cmake  ecland_macros.cmake
src/surf/: offline_driver.cmake  surf.cmake
src/surf/interface/: surfrad.h
src/surf/module/: ecland_aux_diag_type_mod.F90  ecland_aux_type_mod.F90  ecland_flux_type_mod.F90  ecland_surface_type_mod.F90  ecphys_aux_diag_type_mod.F90  ecphys_aux_type_mod.F90  ecphys_flux_type_mod.F90  ecphys_state_type_mod.F90  ecphys_surface_type_mod.F90  srfsn_webal_mod.F90  surfrad_ctl_mod.F90  yomphyder.F90
src/surf/offline/driver/: callpar1s.F90  callpar1s_layer.F90  cpg1s.F90  cpg1s_layer.F90  ecland_atmo_type_mod.F90  ecland_aux_diag_type_mod.F90  ecland_aux_type_mod.F90  ecland_climate_type_mod.F90  ecland_ddh_type_mod.F90  ecland_drv.F90  ecland_flux_type_mod.F90  ecland_gems_type_mod.F90  ecland_internal_type_mod.F90  ecland_surf_local_type_mod.F90  ecland_surface_type_mod.F90  stepo1s.F90  upddiag.F90  upddiag_layer.F90  wrtclim.F90  yomgc1s.F90
tests/: CMakeLists.txt
